Bug 1754610 - Make media.clockdrift.buffering unsigned r=padenot
The `media.clockdrift.buffering`'s type was set to signed integer when
introducing `AudioDriftCorrection` in Bug 1637234 (D74884), but the
buffering type of the `AudioDriftCorrection` was changed to unsigned in
Bug 1656438 (D89777). The `media.clockdrift.buffering` should be updated
to the unsigned integer as well.

Differential Revision: https://phabricator.services.mozilla.com/D138378

UltraBlame original commit: 87ca82f4e2b2c3c4799d8490c570ce2c2868f197

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -8392,7 +8392,7 @@
 
 # ClockDrift desired buffering in milliseconds
 - name: media.clockdrift.buffering
-  type: int32_t
+  type: uint32_t
   mirror: always
   value: 50
 
