Bug 1754098 - run mochitest as -no-fission. r=releng-reviewers,ahal
Differential Revision: https://phabricator.services.mozilla.com/D138375

UltraBlame original commit: 4033796ef15f4a56bb960696585562eb48ff712e

--- a/taskcluster/ci/test/variants.yml
+++ b/taskcluster/ci/test/variants.yml
@@ -79,6 +79,15 @@ fission:
             extra-options:
                 - "--setpref=fission.autostart=true"
 
+no-fission:
+    description: "{description} without fission enabled"
+    contact: jmaher
+    suffix: "nofis"
+    merge:
+        mozharness:
+            extra-options:
+                - "--setpref=fission.autostart=false"
+
 fission-xorigin:
     description: "{description} with cross-origin and fission enabled"
     contact: cpeterson
