--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -49,19 +49,21 @@ mochitest-plain:
     loopback-video: true
     virtualization: virtual
     variants:
-        - aab
+        - aab+no-fission
         - dynamic-first-party-isolation+fission
         - dynamic-first-party-isolation+fission-xorigin
         - fission
         - fission-xorigin
-        - socketprocess_networking
+        - no-fission
+        - socketprocess_networking+no-fission
         - socketprocess_networking+fission
         - wayland
-        - webrender-sw
+        - webrender-sw+no-fission
         - webrender-sw+fission
         - headless+fission
-        - headless+socketprocess_networking
+        - headless+socketprocess_networking+no-fission
         - headless+socketprocess_networking+fission
+    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -83,7 +85,7 @@ mochitest-plain:
                     windows.*64-ccov-qr/opt: ['mozilla-central']
                     linux.*64-ccov-qr/opt: ['mozilla-central']
                     default: []
-            socketprocess_networking:
+            socketprocess_networking+no-fission:
                 by-test-platform:
                     linux.*asan.*: ['trunk']
                     linux.*64(-shippable)?-qr/(opt|debug): ['trunk']
@@ -96,7 +98,7 @@ mochitest-plain:
                 by-test-platform:
                     linux1804-64-qr/debug: built-projects
                     default: []
-            webrender-sw:
+            webrender-sw+no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     linux.*asan.*: ['trunk']
@@ -106,11 +108,11 @@ mochitest-plain:
                 by-test-platform:
                     linux1804-64-qr/debug: built-projects
                     default: []
-            aab:
+            aab+no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     default: []
-            headless:
+            headless+no-fission:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
@@ -118,7 +120,7 @@ mochitest-plain:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
-            headless+socketprocess_networking:
+            headless+socketprocess_networking+no-fission:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
@@ -126,12 +128,12 @@ mochitest-plain:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
-            default:
+            no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug-isolated-process: []
+                    android.*: built-projects
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
-                    android.*: built-projects
                     default: []
 
     chunks:
@@ -203,17 +205,17 @@ mochitest-browser-chrome:
     treeherder-symbol: M(bc)
     schedules-component: mochitest-browser-chrome
     loopback-video: true
-    run-without-variant: false
     variants:
         - dynamic-first-party-isolation+fission
         - fission
-        - webrender-sw
+        - webrender-sw+no-fission
         - webrender-sw+fission
-        - webrender-sw+a11y-checks
+        - webrender-sw+a11y-checks+no-fission
         - webrender-sw+a11y-checks+fission
         - webrender-sw+wayland
-        - socketprocess_networking
+        - socketprocess_networking+no-fission
         - socketprocess_networking+fission
+    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -225,7 +227,7 @@ mochitest-browser-chrome:
                     android.*: []
                     linux.*: []  # linux runs M-swr(bc), not M(bc)
                     default: built-projects
-            webrender-sw:
+            webrender-sw+no-fission:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
@@ -239,7 +241,7 @@ mochitest-browser-chrome:
                     linux.*64-devedition-qr/opt: built-projects
                     windows10-64-2004-qr/debug: built-projects
                     default: []
-            webrender-sw+a11y-checks:
+            webrender-sw+a11y-checks+no-fission:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
@@ -247,7 +249,7 @@ mochitest-browser-chrome:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
-            socketprocess_networking:
+            socketprocess_networking+no-fission:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable)?-qr/opt: ['trunk']
@@ -366,14 +368,14 @@ mochitest-chrome:
     loopback-video: true
     run-without-variant: false
     variants:
-        - dynamic-first-party-isolation
+        - dynamic-first-party-isolation+1proc
         - 1proc
         - socketprocess_networking+1proc
         - wayland+1proc
         - webrender-sw+1proc
     run-on-projects:
         by-variant:
-            dynamic-first-party-isolation:
+            dynamic-first-party-isolation+1proc:
                 by-test-platform:
                     (linux.*64|macosx.*64|windows10-64-2004)(-shippable)?-qr/(opt|debug): ['mozilla-central']
                     default: []
@@ -419,19 +421,21 @@ mochitest-devtools-chrome:
     treeherder-symbol: M(dt)
     loopback-video: true
     variants:
-        - a11y-checks
+        - a11y-checks+no-fission
         - a11y-checks+fission
         - dynamic-first-party-isolation+fission
+        - no-fission
         - fission
-        - socketprocess_networking
+        - socketprocess_networking+no-fission
         - socketprocess_networking+fission
         - wayland
-        - webrender-sw
+        - webrender-sw+no-fission
         - webrender-sw+fission
         - devtools-no-eft-no-fission
+    run-without-variant: false
     run-on-projects:
         by-variant:
-            a11y-checks:
+            a11y-checks+no-fission:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
@@ -453,7 +457,7 @@ mochitest-devtools-chrome:
                     .*-tsan-qr/opt: ['trunk']
                     linux.*64-ccov-qr/opt: []
                     default: built-projects
-            socketprocess_networking:
+            socketprocess_networking+no-fission:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable)?-qr/opt: ['trunk']
@@ -467,7 +471,7 @@ mochitest-devtools-chrome:
                     linux.*64-ccov-qr/opt: []
                     linux.*64(-shippable)?-qr/(opt|debug): built-projects
                     default: []
-            webrender-sw:
+            webrender-sw+no-fission:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
@@ -475,7 +479,7 @@ mochitest-devtools-chrome:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            default:
+            no-fission:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
@@ -516,9 +520,11 @@ mochitest-plain-gpu:
     variants:
         - dynamic-first-party-isolation+fission
         - fission
+        - no-fission
         - wayland
-        - webrender-sw
+        - webrender-sw+no-fission
         - webrender-sw+fission
+    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -533,7 +539,7 @@ mochitest-plain-gpu:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            webrender-sw:
+            webrender-sw+no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     linux.*asan.*: ['trunk']
@@ -543,7 +549,7 @@ mochitest-plain-gpu:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            default:
+            no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug-isolated-process: []
                     linux.*64-ccov-qr/opt: []
@@ -637,12 +643,14 @@ mochitest-media:
     variants:
         - dynamic-first-party-isolation+fission
         - fission
-        - socketprocess
+        - no-fission
+        - socketprocess+no-fission
         - socketprocess+fission
         - wayland
         - webgl-ipc+fission
-        - webrender-sw
+        - webrender-sw+no-fission
         - webrender-sw+fission
+    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -666,7 +674,7 @@ mochitest-media:
                     windows10-(32|64)-2004(-shippable)?-qr/(opt|debug): ['autoland', 'mozilla-central']
                     windows10-64-2004-asan-qr/opt: ['autoland', 'mozilla-central']
                     default: []
-            socketprocess:
+            socketprocess+no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: ['autoland', 'mozilla-central']
                     android-hw-.*-aarch64-qr/debug: built-projects
@@ -686,7 +694,7 @@ mochitest-media:
                 by-test-platform:
                     linux.*64-qr/debug: ['autoland', 'mozilla-central']
                     default: []
-            webrender-sw:
+            webrender-sw+no-fission:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: ['autoland', 'mozilla-central']
                     linux1804-64-qr/debug: ['trunk']
@@ -697,7 +705,7 @@ mochitest-media:
                     android.*: []
                     linux1804-64-qr/debug: ['autoland', 'mozilla-central']
                     default: []
-            default:
+            no-fission:
                 by-test-platform:
                     android-hw-.*/opt: []
                     android-hw-.*-arm7.*/(?:debug)?: ['trunk', 'mozilla-beta', 'mozilla-release']
