--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -49,21 +49,19 @@ mochitest-plain:
     loopback-video: true
     virtualization: virtual
     variants:
-        - aab+no-fission
+        - aab
         - dynamic-first-party-isolation+fission
         - dynamic-first-party-isolation+fission-xorigin
         - fission
         - fission-xorigin
-        - no-fission
-        - socketprocess_networking+no-fission
+        - socketprocess_networking
         - socketprocess_networking+fission
         - wayland
-        - webrender-sw+no-fission
+        - webrender-sw
         - webrender-sw+fission
         - headless+fission
-        - headless+socketprocess_networking+no-fission
+        - headless+socketprocess_networking
         - headless+socketprocess_networking+fission
-    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -85,7 +83,7 @@ mochitest-plain:
                     windows.*64-ccov-qr/opt: ['mozilla-central']
                     linux.*64-ccov-qr/opt: ['mozilla-central']
                     default: []
-            socketprocess_networking+no-fission:
+            socketprocess_networking:
                 by-test-platform:
                     linux.*asan.*: ['trunk']
                     linux.*64(-shippable)?-qr/(opt|debug): ['trunk']
@@ -98,7 +96,7 @@ mochitest-plain:
                 by-test-platform:
                     linux1804-64-qr/debug: built-projects
                     default: []
-            webrender-sw+no-fission:
+            webrender-sw:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     linux.*asan.*: ['trunk']
@@ -108,11 +106,11 @@ mochitest-plain:
                 by-test-platform:
                     linux1804-64-qr/debug: built-projects
                     default: []
-            aab+no-fission:
+            aab:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     default: []
-            headless+no-fission:
+            headless:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
@@ -120,7 +118,7 @@ mochitest-plain:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
-            headless+socketprocess_networking+no-fission:
+            headless+socketprocess_networking:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
@@ -128,12 +126,12 @@ mochitest-plain:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['mozilla-central']
                     default: []
-            no-fission:
+            default:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug-isolated-process: []
-                    android.*: built-projects
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
+                    android.*: built-projects
                     default: []
 
     chunks:
@@ -205,17 +203,17 @@ mochitest-browser-chrome:
     treeherder-symbol: M(bc)
     schedules-component: mochitest-browser-chrome
     loopback-video: true
+    run-without-variant: false
     variants:
         - dynamic-first-party-isolation+fission
         - fission
-        - webrender-sw+no-fission
+        - webrender-sw
         - webrender-sw+fission
-        - webrender-sw+a11y-checks+no-fission
+        - webrender-sw+a11y-checks
         - webrender-sw+a11y-checks+fission
         - webrender-sw+wayland
-        - socketprocess_networking+no-fission
+        - socketprocess_networking
         - socketprocess_networking+fission
-    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -227,7 +225,7 @@ mochitest-browser-chrome:
                     android.*: []
                     linux.*: []  # linux runs M-swr(bc), not M(bc)
                     default: built-projects
-            webrender-sw+no-fission:
+            webrender-sw:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
@@ -241,7 +239,7 @@ mochitest-browser-chrome:
                     linux.*64-devedition-qr/opt: built-projects
                     windows10-64-2004-qr/debug: built-projects
                     default: []
-            webrender-sw+a11y-checks+no-fission:
+            webrender-sw+a11y-checks:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
@@ -249,7 +247,7 @@ mochitest-browser-chrome:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
-            socketprocess_networking+no-fission:
+            socketprocess_networking:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable)?-qr/opt: ['trunk']
@@ -368,14 +366,14 @@ mochitest-chrome:
     loopback-video: true
     run-without-variant: false
     variants:
-        - dynamic-first-party-isolation+1proc
+        - dynamic-first-party-isolation
         - 1proc
         - socketprocess_networking+1proc
         - wayland+1proc
         - webrender-sw+1proc
     run-on-projects:
         by-variant:
-            dynamic-first-party-isolation+1proc:
+            dynamic-first-party-isolation:
                 by-test-platform:
                     (linux.*64|macosx.*64|windows10-64-2004)(-shippable)?-qr/(opt|debug): ['mozilla-central']
                     default: []
@@ -421,21 +419,19 @@ mochitest-devtools-chrome:
     treeherder-symbol: M(dt)
     loopback-video: true
     variants:
-        - a11y-checks+no-fission
+        - a11y-checks
         - a11y-checks+fission
         - dynamic-first-party-isolation+fission
-        - no-fission
         - fission
-        - socketprocess_networking+no-fission
+        - socketprocess_networking
         - socketprocess_networking+fission
         - wayland
-        - webrender-sw+no-fission
+        - webrender-sw
         - webrender-sw+fission
         - devtools-no-eft-no-fission
-    run-without-variant: false
     run-on-projects:
         by-variant:
-            a11y-checks+no-fission:
+            a11y-checks:
                 by-test-platform:
                     linux.*64(-shippable)?-qr/opt: ['trunk']
                     default: []
@@ -457,7 +453,7 @@ mochitest-devtools-chrome:
                     .*-tsan-qr/opt: ['trunk']
                     linux.*64-ccov-qr/opt: []
                     default: built-projects
-            socketprocess_networking+no-fission:
+            socketprocess_networking:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable)?-qr/opt: ['trunk']
@@ -471,7 +467,7 @@ mochitest-devtools-chrome:
                     linux.*64-ccov-qr/opt: []
                     linux.*64(-shippable)?-qr/(opt|debug): built-projects
                     default: []
-            webrender-sw+no-fission:
+            webrender-sw:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
@@ -479,7 +475,7 @@ mochitest-devtools-chrome:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            no-fission:
+            default:
                 by-test-platform:
                     linux1804-64-qr/debug: ['trunk']
                     linux1804-64(-shippable|-asan)?-qr/opt: ['trunk']
@@ -520,11 +516,9 @@ mochitest-plain-gpu:
     variants:
         - dynamic-first-party-isolation+fission
         - fission
-        - no-fission
         - wayland
-        - webrender-sw+no-fission
+        - webrender-sw
         - webrender-sw+fission
-    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -539,7 +533,7 @@ mochitest-plain-gpu:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            webrender-sw+no-fission:
+            webrender-sw:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: built-projects
                     linux.*asan.*: ['trunk']
@@ -549,7 +543,7 @@ mochitest-plain-gpu:
                 by-test-platform:
                     linux.*64-qr/debug: built-projects
                     default: []
-            no-fission:
+            default:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug-isolated-process: []
                     linux.*64-ccov-qr/opt: []
@@ -643,14 +637,12 @@ mochitest-media:
     variants:
         - dynamic-first-party-isolation+fission
         - fission
-        - no-fission
-        - socketprocess+no-fission
+        - socketprocess
         - socketprocess+fission
         - wayland
         - webgl-ipc+fission
-        - webrender-sw+no-fission
+        - webrender-sw
         - webrender-sw+fission
-    run-without-variant: false
     run-on-projects:
         by-variant:
             dynamic-first-party-isolation+fission:
@@ -674,7 +666,7 @@ mochitest-media:
                     windows10-(32|64)-2004(-shippable)?-qr/(opt|debug): ['autoland', 'mozilla-central']
                     windows10-64-2004-asan-qr/opt: ['autoland', 'mozilla-central']
                     default: []
-            socketprocess+no-fission:
+            socketprocess:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: ['autoland', 'mozilla-central']
                     android-hw-.*-aarch64-qr/debug: built-projects
@@ -694,7 +686,7 @@ mochitest-media:
                 by-test-platform:
                     linux.*64-qr/debug: ['autoland', 'mozilla-central']
                     default: []
-            webrender-sw+no-fission:
+            webrender-sw:
                 by-test-platform:
                     android-em-7.0-x86_64-qr/debug: ['autoland', 'mozilla-central']
                     linux1804-64-qr/debug: ['trunk']
@@ -705,7 +697,7 @@ mochitest-media:
                     android.*: []
                     linux1804-64-qr/debug: ['autoland', 'mozilla-central']
                     default: []
-            no-fission:
+            default:
                 by-test-platform:
                     android-hw-.*/opt: []
                     android-hw-.*-arm7.*/(?:debug)?: ['trunk', 'mozilla-beta', 'mozilla-release']
