Bug 1674336 - Add WorkerScope#clearConsoleEvents. r=asuth.
This will be used from the DevTools webconsole to clear events when
the user hits the clear button in the UI.

A test for the console is added in the next patch of the queue.

Differential Revision: https://phabricator.services.mozilla.com/D138314

UltraBlame original commit: d6313e8653b96479d816f4c671bbaa618519c1da

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1584,7 +1584,7 @@ DOMInterfaces = {
 'WorkerDebuggerGlobalScope': {
     'headerFile': 'mozilla/dom/WorkerScope.h',
     'implicitJSContext': [
-        'dump', 'reportError', 'setConsoleEventHandler',
+        'dump', 'clearConsoleEvents', 'reportError', 'setConsoleEventHandler',
     ],
 },
 
