Bug 1753718 - Add test(s) ensuring that a running background task does not prevent application updates. r=application-update-reviewers,bytesized
Differential Revision: https://phabricator.services.mozilla.com/D138085

UltraBlame original commit: 8d904f0efbcb891a375f32adc0b273fe1a7a4d7c

--- a/toolkit/mozapps/update/tests/unit_base_updater/xpcshell.ini
+++ b/toolkit/mozapps/update/tests/unit_base_updater/xpcshell.ini
@@ -30,6 +30,7 @@ reason = Windows only test
 [invalidArgWorkingDirPathRelativeFailure.js]
 [marSuccessComplete.js]
 [marSuccessPartial.js]
+[marSuccessPartialWhileBackgroundTaskRunning.js]
 [marFailurePartial.js]
 [marStageSuccessComplete.js]
 skip-if =
