Bug 1754098 - run mochitest as -no-fission. r=releng-reviewers,ahal
Differential Revision: https://phabricator.services.mozilla.com/D138375

UltraBlame original commit: 006d687b6097d3cb98e2e41a9f304338d8c3f7d8

--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -42,31 +42,41 @@ treeherder:
         'M': 'Mochitests'
         'M-headless': 'Headless Mochitests'
         'M-headless-fis': 'Headless Mochitests with fission.'
+        'M-headless-nofis': 'Headless Mochitests without fission enabled.'
         'M-headless-spi-nw': 'Headless Mochitests with fission and socketprocess networking.'
         'M-headless-spi-nw-fis': 'Headless Mochitests with fission and socketprocess networking and fission enabled.'
+        'M-headless-spi-nw-nofis': 'Headless Mochitests with fission and socketprocess networking without fission enabled.'
         'M-aab': 'Mochitests with AAB test_runner.'
+        'M-aab-nofis': 'Mochitests with AAB test_runner without fission enabled.'
         'M-1proc': 'Mochitests without e10s'
         'M-a11y-checks': 'Mochitests with accessibility checks enabled'
+        'M-a11y-checks-nofis': 'Mochitests with accessibility checks enabled and fission not enabled'
         'M-a11y-checks-fis': 'Mochitests with accessibility checks enabled and fission enabled'
         'M-dfpi': 'Mochitests with dFPI enabled'
-        'M-dfpi-1proc': 'Mochitests with dFPI enabled and e10s disabled'
+        'M-dfpi-1proc': 'Mochitests with dFPI enabled and no fission or e10s'
         'M-dfpi-fis': 'Mochitests with dFPI and Fission enabled'
         'M-dfpi-fis-xorig': 'Mochitests with dFPI, cross-origin and fission enabled'
         'M-fis': 'Mochitests with fission enabled'
         'M-fis-xorig': 'Mochitests with cross-origin and fission enabled'
         'M-fis-gli': 'Mochitests with fission and WebGL IPC enabled'
         'M-gli': 'Mochitests with WebGL over IPC'
+        'M-gli-nofis': 'Mochitests with WebGL over IPC without fission enabled'
         'M-gli-fis': 'Mochitests with WebGL over IPC with fission enabled'
+        'M-nofis': 'Mochitests without fission enabled'
         'M-spi': 'Mochitests with socket process'
+        'M-spi-nofis': 'Mochitests with socket process without fission enabled'
         'M-spi-fis': 'Mochitests with socket process with fission enabled'
         'M-spi-nw': 'Mochitests with networking on socket process'
+        'M-spi-nw-nofis': 'Mochitests with networking on socket process without fission enabled'
         'M-spi-nw-fis': 'Mochitests with networking on socket process with fission enabled'
         'M-spi-nw-1proc': 'Mochitests with networking on socket process without e10s'
         'M-swr': 'Mochitests with software webrender enabled'
         'M-swr-a11y-checks': 'Mochitests with software webrender and accessibility checks enabled'
         'M-swr-a11y-checks-fis': 'Mochitests with software webrender and accessibility checks enabled and fission'
+        'M-swr-a11y-checks-nofis': 'Mochitests with software webrender and accessibility checks enabled without fission enabled'
         'M-swr-1proc': 'Mochitests with software webrender enabled without e10s'
         'M-swr-fis': 'Mochitests with software webrender and fission enabled'
+        'M-swr-nofis': 'Mochitests with software webrender and fission not enabled'
         'M-swr-wayland': 'Mochitests with software webrender and Wayland backend enabled'
         'M-wayland': 'Mochitests with Wayland backend enabled'
         'M-wayland-1proc': 'Mochitests with Wayland backend enabled without e10s'
@@ -127,8 +137,8 @@ treeherder:
         'X': 'Xpcshell tests'
         'X-fis': 'Xpcshell tests with fission enabled'
         'X-spi-nw': 'Xpcshell tests with networking on socket process'
+        'X-spi-nw-fis': 'Xpcshell tests with networking on socket process'
         'X-f': 'Xpcshell tests that fail on a given config'
-        'X-f-fis': 'Xpcshell tests that fail on a given config w/fission'
         'X-f-spi-nw': 'Xpcshell tests that fail on a given config w/socket process'
         'L10n': 'Localised Repacks'
         'L10n-Rpk': 'Localized Repackaged Repacks'
