Bug 1753626 - [devtools] Repurpose browser_dbg-reload.js to test breakpoints on reload when source content changes r=ochameau
This repurposes browser_dbg-reload.js which tested breakpoints resync after reload when the source
content changes.
This renamed test (browser_dbg-breakpoints-reloading-with-source-changes.js) covers the expected behaviour after breakpoint shifting is removed.

The sceanarios covered are :-

- When new content is added and the breakpoint points to a different source code
- When the content changes and the breakpoint is on a non-breakable line
- When the content changes and the line for the breakpoint has been removed.

Currently we use IS_BREAKPOINT_SHIFTING_ENABLED to make the test pass with all the issues.

Also removing old example files that are no longer used.

Differential Revision: https://phabricator.services.mozilla.com/D136720

UltraBlame original commit: 72da4f232157727f0ddd61f66a527e23fff6ac35

--- a/devtools/client/debugger/test/mochitest/browser.ini
+++ b/devtools/client/debugger/test/mochitest/browser.ini
@@ -57,6 +57,7 @@ skip-if = !e10s || verify # This test is only valid in e10s
 [browser_dbg-continue-to-here.js]
 [browser_dbg-continue-to-here-click.js]
 skip-if = os == "win"
+[browser_dbg-breakpoints-reloading-with-source-changes.js]
 [browser_dbg-breakpoints-reloading.js]
 [browser_dbg-breakpoint-skipping.js]
 [browser_dbg-breakpoint-skipping-console.js]
@@ -155,7 +156,6 @@ skip-if = os == "win"
 skip-if = os == "win"
 [browser_dbg-react-jsx.js]
 [browser_dbg-returnvalues.js]
-[browser_dbg-reload.js]
 [browser_dbg-reloading.js]
 skip-if = true
 [browser_dbg-pause-points.js]
