--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6478,7 +6478,7 @@
 # NOTE: This must match JitOptions defaults.
 - name: javascript.options.watchtower.megamorphic
   type: bool
-  value: false
+  value: true
   mirror: always  # LoadStartupJSPrefs
   do_not_use_directly: true
 
