--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -598,3 +598,8 @@ run-sequentially = node server exceptions dont replay well
 [test_https_rr_sorted_alpn.js]
 skip-if = os == "android"
 run-sequentially = node server exceptions dont replay well
+[test_networking_over_socket_process.js]
+skip-if =
+  os == "android"
+  !socketprocess_networking
+run-sequentially = node server exceptions dont replay well
