--- a/browser/modules/metrics.yaml
+++ b/browser/modules/metrics.yaml
@@ -33,7 +33,7 @@ browser.engagement:
       - interaction
     notification_emails:
       - loines@mozilla.com
-    expires: "100"
+    expires: 100
     send_in_pings:
       - baseline
       - metrics
@@ -60,7 +60,7 @@ browser.engagement:
       - interaction
     notification_emails:
       - loines@mozilla.com
-    expires: "100"
+    expires: 100
     send_in_pings:
       - baseline
       - metrics
