Bug 1754426: DOM history changes should create new interaction records. r=Standard8
This also disables smooth scrolling in the interaction tests. When smooth scrolling
is enabled a single scroll, say by pressing the down arrow, actually scrolls in
a number of steps starting small, increasing then decreasing. Because we only
wait for a single scroll event to fire before the test switches pages we only
capture the scrolling distance from the very first step which is often small and
sometimes turns out to be 0. Disabling smooth scrolling makes the scroll happen
in one operation so we capture the entire scrolling distance.

Differential Revision: https://phabricator.services.mozilla.com/D138295

UltraBlame original commit: 6127738d1918c091213fac371676f4036bb7c0d8

--- a/browser/components/places/tests/browser/interactions/browser.ini
+++ b/browser/components/places/tests/browser/interactions/browser.ini
@@ -8,6 +8,7 @@ prefs =
   browser.places.interactions.log=true
   browser.places.interactions.typing_timeout_ms=50
   browser.places.interactions.scrolling_timeout_ms=50
+  general.smoothScroll=false
 
 support-files =
   head.js
