--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -201,6 +201,7 @@ treeherder:
         'perftest-http3': 'Performance tests with HTTP/3'
         'l10n': 'Localization checks'
         'fxrec': 'Desktop startup recorder (fxrecord)'
+        'wc': 'webcompat'
 
 index:
     products:
