Bug 1754931 - Skip new update test on newer macOS versions and Apple hardware. r=bytesized,application-update-reviewers
The manner in which we prepare update tests is not working with some
part of the macOS signing regime; this seems to be the same issue as
Bug 1707753 and Bug 1713329.

Differential Revision: https://phabricator.services.mozilla.com/D138563

UltraBlame original commit: be43395bbd2714c60dc313031c71d63a1ef5c1ec

--- a/toolkit/mozapps/update/tests/unit_base_updater/xpcshell.ini
+++ b/toolkit/mozapps/update/tests/unit_base_updater/xpcshell.ini
@@ -31,6 +31,9 @@ reason = Windows only test
 [marSuccessComplete.js]
 [marSuccessPartial.js]
 [marSuccessPartialWhileBackgroundTaskRunning.js]
+skip-if =
+  apple_silicon  # Bug 1754931
+  apple_catalina # Bug 1754931
 [marFailurePartial.js]
 [marStageSuccessComplete.js]
 skip-if =
