Bug 1752367 - added tests to ensure pip cc order using vttcue.line r=mhowell,niklas
Differential Revision: https://phabricator.services.mozilla.com/D138233

UltraBlame original commit: 02d5110d53783ed225f2d7fd8c40e5816f492fbb

--- a/toolkit/components/pictureinpicture/tests/browser.ini
+++ b/toolkit/components/pictureinpicture/tests/browser.ini
@@ -21,6 +21,8 @@ support-files =
   test-webvtt-1.vtt
   test-webvtt-2.vtt
   test-webvtt-3.vtt
+  test-webvtt-4.vtt
+  test-webvtt-5.vtt
   short.mp4
   ../../../../dom/media/test/gizmo.mp4
   ../../../../dom/media/test/owl.mp3
@@ -87,6 +89,7 @@ skip-if = os == "win" && bits == 64 && debug # Bug 1683002
 [browser_telemetry_togglePiP.js]
 [browser_text_tracks_webvtt_1.js]
 [browser_text_tracks_webvtt_2.js]
+[browser_text_tracks_webvtt_3.js]
 [browser_thirdPartyIframe.js]
 [browser_toggleButtonOnNanDuration.js]
 skip-if =
