Bug 1754572 - Add a delayed kill test r=nika
Differential Revision: https://phabricator.services.mozilla.com/D138483

UltraBlame original commit: 5cea2c885fe7f5e20f16a474768823dc0335344b

--- a/ipc/glue/test/browser/browser.ini
+++ b/ipc/glue/test/browser/browser.ini
@@ -6,6 +6,7 @@ support-files =
 skip-if = !crashreporter
 [browser_utility_clean_shutdown.js]
 [browser_utility_hard_kill.js]
+[browser_utility_hard_kill_delayed.js] # bug 1754572: we really want hard_kill to be rust before hard_kill_delayed
 [browser_utility_memoryReport.js]
 skip-if = tsan # bug 1754554
 [browser_utility_profiler.js]
