Bug 1726782 - Create a new task generating a clang profile for PGO. r=firefox-build-system-reviewers,mhentges
The new task builds a stage 2 compiler and uses it to generate the
profile as stage 3, and the profile is used to feed the now separate
stage 4 clang build. This will allow us to use this same profile to
build mac clangs with PGO.

Differential Revision: https://phabricator.services.mozilla.com/D138511

UltraBlame original commit: f58fe19ec9772c75f08ac192e2b9bb808ad25c56

--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -124,6 +124,31 @@ linux64-clang-13-stage1:
         fetch:
             - clang-13
 
+linux64-clang-13-profile:
+    description: "Clang 13 toolchain build"
+    treeherder:
+        symbol: TL(clang13-profile)
+    run:
+        using: toolchain-script
+        script: build-clang.sh
+        arguments:
+            - 'build/build-clang/linux64.json'
+            - 'build/build-clang/clang-13.json'
+            - 'build/build-clang/skip-stage-1.json'
+            - 'build/build-clang/profile.json'
+        resources:
+            - 'build/build-clang/linux64.json'
+            - 'build/build-clang/clang-13.json'
+            - 'build/build-clang/skip-stage-1.json'
+            - 'build/build-clang/profile.json'
+        toolchain-artifact: public/build/merged.profdata
+    fetches:
+        fetch:
+            - clang-13
+        toolchain:
+            - linux64-clang-13-stage1
+            - linux64-toolchain-sysroot
+
 linux64-clang-13:
     description: "Clang 13 toolchain build"
     attributes:
@@ -137,12 +162,12 @@ linux64-clang-13:
         arguments:
             - 'build/build-clang/linux64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/skip-stage-1.json'
+            - 'build/build-clang/skip-3-stages.json'
             - 'build/build-clang/4stages-pgo.json'
         resources:
             - 'build/build-clang/linux64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/skip-stage-1.json'
+            - 'build/build-clang/skip-3-stages.json'
             - 'build/build-clang/4stages-pgo.json'
         toolchain-alias:
             - linux64-clang
@@ -152,6 +177,7 @@ linux64-clang-13:
             - clang-13
         toolchain:
             - linux64-clang-13-stage1
+            - linux64-clang-13-profile
             - linux64-toolchain-sysroot
             - wasm32-wasi-compiler-rt-13
 
