Bug 1726782 - Enable PGO on x64 and arm64 mac clangs. r=firefox-build-system-reviewers,andi
This should overcome the speed gap between Xcode clang and ours.

We use the profile for the linux build because gathering a profile on actual
macs would be too resource-intensive, and the result with the linux profile
is good enough.

Differential Revision: https://phabricator.services.mozilla.com/D138512

UltraBlame original commit: 17bfaad3db80d6400998309d447d67aaa2e1b971

--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -296,11 +296,13 @@ macosx64-clang-13-raw:
         arguments:
             - 'build/build-clang/macosx64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/1stage.json'
+            - 'build/build-clang/skip-3-stages.json'
+            - 'build/build-clang/4stages-pgo.json'
         resources:
             - 'build/build-clang/macosx64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/1stage.json'
+            - 'build/build-clang/skip-3-stages.json'
+            - 'build/build-clang/4stages-pgo.json'
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         fetch:
@@ -308,6 +310,7 @@ macosx64-clang-13-raw:
         toolchain:
             - linux64-cctools-port
             - linux64-clang-13-macosx-cross
+            - linux64-clang-13-profile
             - macosx64-sdk-11.0
             - wasm32-wasi-compiler-rt-13
 
@@ -356,11 +359,13 @@ macosx64-aarch64-clang-13-raw:
         arguments:
             - 'build/build-clang/macosx64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/1stage.json'
+            - 'build/build-clang/skip-3-stages.json'
+            - 'build/build-clang/4stages-pgo.json'
         resources:
             - 'build/build-clang/macosx64.json'
             - 'build/build-clang/clang-13.json'
-            - 'build/build-clang/1stage.json'
+            - 'build/build-clang/skip-3-stages.json'
+            - 'build/build-clang/4stages-pgo.json'
         toolchain-artifact: public/build/clang.tar.zst
     fetches:
         fetch:
@@ -368,6 +373,7 @@ macosx64-aarch64-clang-13-raw:
         toolchain:
             - linux64-cctools-port
             - linux64-clang-13-macosx-cross
+            - linux64-clang-13-profile
             - macosx64-sdk-11.0
             - wasm32-wasi-compiler-rt-13
 
