Bug 1752829 - Make decorative noodles and logo style configurable in AboutWelcome r=Mardak
Differential Revision: https://phabricator.services.mozilla.com/D137452

UltraBlame original commit: c75cbdfcdde8ee2224090176169791afb21d5a9e

--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -22,6 +22,7 @@ prefs =
 [browser_aboutwelcome_multistage_primary.js]
 [browser_aboutwelcome_multistage_experimentAPI.js]
 [browser_aboutwelcome_rtamo.js]
+[browser_aboutwelcome_configurable_ui.js]
 skip-if = (os == "linux") # Test setup only implemented for OSX and Windows
 [browser_aboutwelcome_attribution.js]
 skip-if = (os == "linux") # Test setup only implemented for OSX and Windows
