Bug 1754786 - Enable NavigationPreload API. r=dom-worker-reviewers,aryx,jstutte
Differential Revision: https://phabricator.services.mozilla.com/D138530

UltraBlame original commit: 43ff1a84ed1e77c095c3b258b703e1284d7ee792

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3402,7 +3402,7 @@
 
 - name: dom.serviceWorkers.navigationPreload.enabled
   type: RelaxedAtomicBool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 # Mitigates ServiceWorker navigation faults by bypassing the ServiceWorker on
