--- a/parser/htmlparser/tests/mochitest/browser.ini
+++ b/parser/htmlparser/tests/mochitest/browser.ini
@@ -6,7 +6,10 @@ prefs =
 [browser_viewsource.js]
 support-files =
   file_viewsource.html
-
+[browser_elementindtd.js]
+support-files =
+  browser_elementindtd.xml
+  browser_elementindtd.dtd
 [browser_ysod_telemetry.js]
 support-files =
   broken_xml.xhtml
