Bug 1754834 - Temporarily ignore will-change:opacity. r=jrmuizel
Enable the pref for a few weeks on Nightly to see if it causes major regressions.

Differential Revision: https://phabricator.services.mozilla.com/D138467

UltraBlame original commit: 7f830f4ca9e9701be5a8bab2e3511c4420cca0fa

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -5594,7 +5594,7 @@
 
 - name: gfx.will-change.ignore-opacity
   type: RelaxedAtomicBool
-  value: false
+  value: true
   mirror: always
 
 # We expose two prefs: gfx.webrender.all and gfx.webrender.enabled.
