Bug 1331981 - Fixed Refresh in Reader Mode for text/plain documents. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D137253

UltraBlame original commit: c895070ae91dca5ce54cbace84e7c01366f13693

--- a/toolkit/components/reader/test/browser.ini
+++ b/toolkit/components/reader/test/browser.ini
@@ -23,6 +23,10 @@ skip-if = debug && os == "linux" && os_version == "18.04" #bug 1638027
 support-files =
   readerModeArticleShort.html
   readerModeArticleMedium.html
+[browser_readerMode_refresh.js]
+support-files =
+  readerModeArticleShort.html
+  readerModeArticleTextPlain.txt
 [browser_readerMode_with_anchor.js]
 support-files =
   readerModeArticle.html
