Bug 1752466 - Block WRusr.dll to stop the deadlock issue.  r=haik
Differential Revision: https://phabricator.services.mozilla.com/D138668

UltraBlame original commit: 6ad3fd5a6da60b6bb34cec27f31db7dfa35de799

--- a/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
+++ b/toolkit/xre/dllservices/mozglue/WindowsDllBlocklistDefs.in
@@ -243,6 +243,9 @@ ALL_PROCESSES += [
     DllBlocklistEntry("WRDll.x86.dll", (1, 1, 0, 227)),
 
     
+    DllBlocklistEntry("WRusr.dll", (9, 0, 32, 49)),
+
+    
     DllBlocklistEntry("iwprn.dll", (6, 9, 11, 360)),
     DllBlocklistEntry("iwprn_x86.dll", (6, 9, 11, 360)),
 ]
