--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -1104,12 +1104,12 @@ pwmgr:
       updates to the doorhanger may change whether a login is actually saved or updated, but will
       not impact the sent object.
     objects: ["save", "update"]
-    bug_numbers: [1650929, 1650941, 1678200, 1714252]
-    expiry_version: "100"
+    bug_numbers: [1650929, 1650941, 1678200, 1714252, 1754637]
+    expiry_version: "112"
     release_channel_collection: opt-out
     products: ["firefox"]
     record_in_processes: [main]
-    notification_emails: ["srudie@mozilla.com", "passwords-dev@mozilla.org"]
+    notification_emails: ["passwords-dev@mozilla.org"]
     extra_keys:
       did_edit_un: >
         Whether or not the saved/updated username was modified by the user typing into the
