Bug 1753146 - Add preferences for tweaking swipe gestures. r=tnikkel
And use 2x threshold value to trigger each SwipeGesture for Windows.

Differential Revision: https://phabricator.services.mozilla.com/D138237

UltraBlame original commit: 74fbc27b186244e9a67e7dfc11d849962f7143e8

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12861,6 +12861,26 @@
 #endif
   mirror: always
 
+# Various metrics to control SwipeTracker.
+- name: widget.swipe.velocity-twitch-tolerance
+  type: float
+  value: 0.0000001f
+  mirror: always
+
+- name: widget.swipe.success-threshold
+  type: float
+#if defined(XP_WIN)
+  value: 0.5f
+#else
+  value: 0.25f
+#endif
+  mirror: always
+
+- name: widget.swipe.success-velocity-contribution
+  type: float
+  value: 0.05f
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "xul."
 #---------------------------------------------------------------------------
