Bug 1755335 - Add skeleton code for TransformStream{,DefaultController} r=mgaudet,emilio
Differential Revision: https://phabricator.services.mozilla.com/D138672

UltraBlame original commit: b2749184f16a4a5ab248ab8477e8287068cea27a

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -3610,13 +3610,17 @@
   value: false
   mirror: always
 
-# DON'T enable, there are known issues!
 - name: dom.streams.byte_streams.enabled
   type: RelaxedAtomicBool
   value: false
   mirror: always
 
 - name: dom.streams.writable_streams.enabled
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+
+- name: dom.streams.transform_streams.enabled
   type: RelaxedAtomicBool
   value: false
   mirror: always
